Avanzamos con las views

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,7 +20,27 @@
     </main>
 
     <footer>
-        &copy; @DateTime.Now.Year - NombreProyecto
+
+    <section>
+    
+        <div>
+            <img src="/Imagenes/logo-x" />
+            <h4>NoHaze_Official</h4>
+        </div>
+
+        <div>
+            <img src="/Imagenes/logo-tiktok" />
+            <h4>NoHaze_Ok</h4>
+        </div>
+
+        <div>
+            <img src="/Imagenes/logo-instagram" />
+            <h4>NoHaze</h4>
+        </div>
+
+    </section>
+
+        &copy; @DateTime.Now.Year - NoHaze - Seguinos en nuestras redes
     </footer>
 
 
