--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,6 +1,6 @@
-<img src="" alt="">
+<img src="/Imagenes/NoHaze-Logo nuevo.png" alt="NoHaze Logo">
 <h1>Login</h1>
-<form action='@Url.Action("","")' method= "post">
+<form action='@Url.Action("Login","Account")' method= "post">
     <section>
         <input type="text" name="Username" placeholder="Username"/>
         <input type="password" name="Password" placeholder="Password"/>
