--- a/Views/Account/SignIn.cshtml
+++ b/Views/Account/SignIn.cshtml
@@ -1,8 +1,8 @@
-<img src=""/>
+<img src="/Imagenes/NoHaze-Logo nuevo.png" alt="NoHaze Logo">
 
 <h1>Create Account</h1>
 
-<form action="#" method="post"> 
+<form action='@Url.Action("Signin","Account")' method="post"> 
 
     <input type="text"  placeholder="Email" name="email" />
     <input type="text"  placeholder="Username" name="username"/>
