faltan 4 views, todas las view faltan ser actualizadas con sus respectivas sandbox

--- a/Views/Account/SignIn.cshtml
+++ b/Views/Account/SignIn.cshtml
@@ -1,4 +1,6 @@
-<img src="/Imagenes/NoHaze-Logo nuevo.png" alt="NoHaze Logo">
+<!-- pegar nuevo luego -->
+
+<!-- <img src="/Imagenes/NoHaze-Logo nuevo.png" alt="NoHaze Logo">
 
 <h1>Create Account</h1>
 
@@ -10,10 +12,9 @@
     <input type="date"  placeholder="Fecha de Nacimiento" />
 
 
-<!-- revisar si este radio funcoina asi -->
     <input type="radio" name="recibeNotis" />
     <label>Recibir Notificación</label>
 
 
-</form>
+</form> -->
 
