--- a/Views/Home/PlayList.cshtml
+++ b/Views/Home/PlayList.cshtml
@@ -1,14 +1,1 @@
-<!-- hay que hacer lo de buscar -->
-<section>
-    
-    <!-- foreach -->
-        <div>
-            <h2>nombrePlaylist</h2>
-            <a href="#">|></a>
-            <!-- foreach -->
-            <!-- tags -->
-            <!-- cierre -->
-            
-        </div>
-    <!-- cierre -->
-</section>
+<!-- pegar nuevo luego -->
