--- a/Views/Home/Tienda-Catalogo.cshtml
+++ b/Views/Home/Tienda-Catalogo.cshtml
@@ -1,4 +1,6 @@
-<h3>Tienda de monedas</h3>
+<!-- hacer de nuevo -->
+
+<!-- <h3>Tienda de monedas</h3>
 
 <h5>En esta tienda podras comprar tiempo de ocio en tus apps</h5>
 
@@ -10,4 +12,4 @@
     <a href="#">Comprar</a>
     
     </div>
-}
+} -->
