--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,10 +1,13 @@
-<img src="/Imagenes/NoHaze-Logo nuevo.png" alt="NoHaze Logo">
+<!-- pegar nuevo luego -->
+
+
+<!-- <img src="/Imagenes/NoHaze-Logo nuevo.png" alt="NoHaze Logo">
 <h1>Login</h1>
 <form action='@Url.Action("Login","Account")' method= "post">
     <section>
         <input type="text" name="Username" placeholder="Username"/>
         <input type="password" name="Password" placeholder="Password"/>
         <h4>Forgot password?</h4>
-        <input type="submit" value="Log in"/>
+        <input type="submit" value="Login"/>
     </section>
-</form>
+</form> -->
