--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,42 +1,1 @@
-﻿   <!-- <section>
-
-   <div>
-    <img src="/Imagenes/NoHaze-Logo nuevo.png" alt="NoHaze Logo">
-    <h1>Bienvenido</h1>
-   </div>
-   
-   <div>
-    <a href='@Url.Action("LogIn","Account")'>Log In</a>
-    <a href='@Url.Action("SignIn","Account")'>Sign In</a>
-   </div>
-
-   <h2>Encontrá la claridad que necesitás para concentrarte, relajarte y rendir mejor cada día.</h2>
-
-   <div>
-    <h2>¿Que es NoHaze?</h2>
-    <h3>NoHaze es una web hecha para ayudarte en concentrate, avanzár y todo lo que necesitás para trabajar con calma.</h3>
-   </div>
-
-   </section>  -->
-
-
-<section>
-
-   <div>
-    <img src="/Imagenes/NoHaze-Logo nuevo.png" alt="NoHaze Logo">
-    <h1>Bienvenido</h1>
-   </div>
-   
-   <div>
-   <button>Log In</button>
-   <button></button>
-   </div>
-
-   <h2>Encontrá la claridad que necesitás para concentrarte, relajarte y rendir mejor cada día.</h2>
-
-   <div>
-    <h2>¿Que es NoHaze?</h2>
-    <h3>NoHaze es una web hecha para ayudarte en concentrate, avanzár y todo lo que necesitás para trabajar con calma.</h3>
-   </div>
-
-   </section> 
+﻿<!-- pegar nuevo luego -->
