--- a/Views/Home/Perfil.cshtml
+++ b/Views/Home/Perfil.cshtml
@@ -1,14 +1,1 @@
-<img src="" alt="">
-<!-- faltan las @Viewbags -->
-
-<!-- nombre -->
-<h1></h1>
- <!--date  -->
-<h3></h3>
-<!-- objetivo -->
-<h3></h3>
-<!-- descripcion -->
-<h3></h3>
-
-<a href="#">Editar</a>
-<a href="#">Log Out</a>
+<!-- pegar nuevo luego -->
