tienda-compra avanzando

--- a/Views/Home/Tienda-Compra.cshtml
+++ b/Views/Home/Tienda-Compra.cshtml
@@ -1,1 +1,19 @@
 <!-- hacer luego -->
+
+<img src="/Imagenes/tiktok-icon.png" />
+
+
+<section>
+
+<p>1</p>
+<img src="/Imagenes/(hacerHazeCoinsIlustrator)" />
+<p>1 minuto</p>
+
+</section>
+
+<!-- inicio Carousel -->
+
+
+<!-- fin Carousel -->
+
+
