Header terminado pero con errores y falta de links, htmls terminados y controller empezados

--- a/Views/Account/SignIn.cshtml
+++ b/Views/Account/SignIn.cshtml
@@ -1,20 +1,22 @@
-<!-- pegar nuevo luego -->
+    <main>
+        <img src="/Imagenes/NoHaze-Logo nuevo.png" alt="NoHaze Logo">
+        
+        <h1>Create Account</h1>
+        
+        <form action="Home.html"> 
+        
+            <input type="text"  placeholder="Email" name="email" />
+            <input type="text"  placeholder="Username" name="username"/>
+            <input type="password"  placeholder="Password" name="password" />
+            <input type="date"  placeholder="Fecha de Nacimiento" />
+        
+            <input type="radio" name="recibeNotis" />
+            <label>Recibir Notificación</label>
+        
+            <input type="submit" value="Sign In">
+        
+        </form>
+        
+        <a href="Index.html">.</a>
 
-<!-- <img src="/Imagenes/NoHaze-Logo nuevo.png" alt="NoHaze Logo">
-
-<h1>Create Account</h1>
-
-<form action='@Url.Action("Signin","Account")' method="post"> 
-
-    <input type="text"  placeholder="Email" name="email" />
-    <input type="text"  placeholder="Username" name="username"/>
-    <input type="password"  placeholder="Password" name="password" />
-    <input type="date"  placeholder="Fecha de Nacimiento" />
-
-
-    <input type="radio" name="recibeNotis" />
-    <label>Recibir Notificación</label>
-
-
-</form> -->
-
+    </main>
