--- a/Views/Home/Perfil.cshtml
+++ b/Views/Home/Perfil.cshtml
@@ -1,1 +1,19 @@
-<!-- pegar nuevo luego -->
+    <main>
+        <div>
+            <img src="/Imagenes/FotoPerfil.jpg" alt="Perfil">
+            <h1>Mateo Luna</h1>
+            <h3>09/09/2006</h3>
+
+            <h3>Objetivo: Estudiar más de dos horas sin desconcentrarme</h3>
+            <p>Descripción: Me gusta comer milanesa con pure y usar discord</p>
+        </div>
+
+        <div>
+
+            <a href="editar.html">Editar</a>
+            <a href="index.html">LogOut</a>
+
+        </div>
+
+
+    </main>
