--- a/Views/Home/PlayList.cshtml
+++ b/Views/Home/PlayList.cshtml
@@ -1,1 +1,41 @@
-<!-- pegar nuevo luego -->
+    <main>
+            <div class="container-fluid">
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+                </form>
+            </div>
+
+            <section>
+                <div>
+                    <img src="" alt="FotoPlaylist">
+                    <h2>Nombre Playlist</h2>
+                    <a href="">Play</a>
+                    <p>Tag</p>
+                    <p>Tag</p>
+                </div>
+
+                <div>
+                    <img src="" alt="FotoPlaylist">
+                    <h2>Nombre Playlist</h2>
+                    <a href="">Play</a>
+                    <p>Tag</p>
+                    <p>Tag</p>
+                </div>
+
+                <div>
+                    <img src="" alt="FotoPlaylist">
+                    <h2>Nombre Playlist</h2>
+                    <a href="">Play</a>
+                    <p>Tag</p>
+                    <p>Tag</p>
+                </div>
+
+                <div>
+                    <img src="" alt="FotoPlaylist">
+                    <h2>Nombre Playlist</h2>
+                    <a href="">Play</a>
+                    <p>Tag</p>
+                    <p>Tag</p>
+                </div>
+            </section>
+    </main>
