--- a/Views/Home/Playlist-Frecuencias.cshtml
+++ b/Views/Home/Playlist-Frecuencias.cshtml
@@ -1,1 +1,49 @@
-<!-- pegar nuevo luego -->
+<main>
+        <img src="" alt="FotoPlaylist">
+        <h1>Nombre</h1>
+        <h5>NoHaze Team</h5>
+
+        <a href="">Play</a>
+        <a href="">Shuffle</a>
+
+        <section>
+            <div>
+                <img src="" alt="FotoFrecuencia">
+                <h2>1000hz (Dormir)</h2>
+                <h5>NoHaze Team</h5>
+            </div>
+            <div>
+                <img src="" alt="FotoFrecuencia">
+                <h2>1000hz (Dormir)</h2>
+                <h5>NoHaze Team</h5>
+            </div>
+            <div>
+                <img src="" alt="FotoFrecuencia">
+                <h2>1000hz (Dormir)</h2>
+                <h5>NoHaze Team</h5>
+            </div>
+            <div>
+                <img src="" alt="FotoFrecuencia">
+                <h2>1000hz (Dormir)</h2>
+                <h5>NoHaze Team</h5>
+            </div>
+        </section>
+
+        <h1>Frecuencias recomendadas</h1>
+        
+        <section>
+
+            <div>
+                <img src="" alt="FotoFrecuencia">
+                <h2>1000hz (Dormir)</h2>
+                <h5>NoHaze Team</h5>
+            </div>
+            <div>
+                <img src="" alt="FotoFrecuencia">
+                <h2>1000hz (Dormir)</h2>
+                <h5>NoHaze Team</h5>
+            </div>
+            
+        </section>
+
+    </main>
