--- a/Views/Home/Tienda-Catalogo.cshtml
+++ b/Views/Home/Tienda-Catalogo.cshtml
@@ -1,15 +1,43 @@
-<!-- hacer de nuevo -->
+    <main>
 
-<!-- <h3>Tienda de monedas</h3>
+        <h1>Tienda de monedas</h1>
 
-<h5>En esta tienda podras comprar tiempo de ocio en tus apps</h5>
+        <p>En esta tienda podras comprar tiempo de ocio en tus apps</p>
 
-@foreach(App i in @ViewBag.listaAppsOcio)
-{
-    <div>
-    
-    <img src="/Imagenes/@i.icono" />
-    <a href="#">Comprar</a>
-    
-    </div>
-} -->
+        <section class="layout">
+            <div>
+                <img src="" alt="AppOcio">
+                <a href="Tienda-Compra.html">Comprar</a>
+            </div>
+            <div>
+                <img src="" alt="AppOcio">
+                <a href="Tienda-Compra.html">Comprar</a>
+            </div>
+            <div>
+                <img src="" alt="AppOcio">
+                <a href="Tienda-Compra.html">Comprar</a>
+            </div>
+            <div>
+                <img src="" alt="AppOcio">
+                <a href="Tienda-Compra.html">Comprar</a>
+            </div>
+            <div>
+                <img src="" alt="AppOcio">
+                <a href="Tienda-Compra.html">Comprar</a>
+            </div>
+            <div>
+                <img src="" alt="AppOcio">
+                <a href="Tienda-Compra.html">Comprar</a>
+            </div>
+            <div>
+                <img src="" alt="AppOcio">
+                <a href="Tienda-Compra.html">Comprar</a>
+            </div>
+            <div>
+                <img src="" alt="AppOcio">
+                <a href="Tienda-Compra.html">Comprar</a>
+            </div>
+          </section>
+
+
+    </main>
