--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,13 +1,16 @@
-<!-- pegar nuevo luego -->
+    <main>
 
+        <img src="/Imagenes/NoHaze-Logo nuevo.png" alt="NoHaze Logo">
+            <h1>Login</h1>
+            <form action="Home.html">
+             <section>
+                    <input type="text" name="Username" placeholder="Username"/>
+                    <input type="password" name="Password" placeholder="Password"/>
+                    <h4>Forgot password?</h4>
+                <input type="submit" value="Log In"/>
+                </section>
+            </form>
 
-<!-- <img src="/Imagenes/NoHaze-Logo nuevo.png" alt="NoHaze Logo">
-<h1>Login</h1>
-<form action='@Url.Action("Login","Account")' method= "post">
-    <section>
-        <input type="text" name="Username" placeholder="Username"/>
-        <input type="password" name="Password" placeholder="Password"/>
-        <h4>Forgot password?</h4>
-        <input type="submit" value="Login"/>
-    </section>
-</form> -->
+        <a href="Index.html">.</a>
+
+    </main>
