--- a/Views/Home/AppsDeOcio-Selector.cshtml
+++ b/Views/Home/AppsDeOcio-Selector.cshtml
@@ -1,18 +1,28 @@
-<!-- 
 <h1>Apps de Ocio</h1>
-
 <input type="search" id="Buscador-Ocio" name="buscador"/>
 
-@foreach(AppOcio i in ViewBag.ListaApps)
-{
     <div>
 
-    <img src="/Imagenes/@i.Icono" alt="Icono-App">
-    <h2>@i.Nombre</h2>
-    <button onclick="eliminarAppOcio('@i.id')">✕</button>
+    <img src="/Imagenes/logo-x.png" alt="Icono-App">
+    <h2>X</h2>
+    <a onclick="#">
+    
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
+  <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
+</svg>
+
+    </a>
 
 
     </div>
 
 
-} -->
+    <!-- boton para volver -->
+<a href="#">
+
+<i class="bi bi-arrow-return-left"></i>
+
+</a>
+
+<!-- fin boton para volver -->
