--- a/Views/Home/Estadisticas.cshtml
+++ b/Views/Home/Estadisticas.cshtml
@@ -1,1 +1,46 @@
-<!-- hacer luego -->
+ <main>
+
+        <h1>Tiempo de productividad</h1>
+
+            <section class="parent">
+                    <div class="div1"> 1</div>
+                    <div class="div2"> 2</div>
+                    <div class="div3"> 3</div>
+                    <div class="div4"> 4</div>
+                    <div class="div5"> 5</div>
+                    <div class="div6"> 6</div>
+                    <div class="div7"> 7</div>
+            </section>
+
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <h1>semanal</h1>
+                  </div>
+                  <div class="carousel-item">
+                    <h1>mensual</h1>
+                  </div>
+                  <div class="carousel-item">
+                    <h1>diario</h1>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+
+              <h1>Apps más usadas</h1>
+
+            <div class="parent1">
+                 <div class="bronce"><img src="" alt="AppBronce"></div>
+                 <div class="plata"><img src="" alt="AppPlata"></div>
+                 <div class="oro"><img src="" alt="AppOro"></div>
+            </div>
+    
+
+    </main>
