--- a/Views/Home/Home.cshtml
+++ b/Views/Home/Home.cshtml
@@ -1,1 +1,45 @@
-<!-- pegar nuevo luego -->
+ <main>
+    
+        <div class="separador">
+            <h1>¡Hola MATE!</h1>
+
+            <h4>Tus objetivos de hoy:</h4>
+        </div>
+        <section>
+            <div class="fondoDiv">
+                <h3>Horas sin usar apps de ocio:</h3>
+                <h3>4/4</h3>
+                <button>Reclamar</button>
+                <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar" style="width: 100%"></div>
+                </div>
+            </div>
+
+            <div class="fondoDiv">
+                <h3>Horas sin usar apps de ocio:</h3>
+                <h3>4/4</h3>
+                <button>Reclamar</button>
+                <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar" style="width: 100%"></div>
+                </div>
+            </div>
+
+            <div class="fondoDiv"
+            >
+                <h3>Horas sin usar apps de ocio:</h3>
+                <h3>4/4</h3>
+                <button>Reclamar</button>
+                <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar" style="width: 100%"></div>
+                </div>
+            </div>
+        </section>
+
+            <h2>Tu Racha</h2>
+            <div class="horizontal">
+                <img src="Imagenes/NoHaze-Logo nuevo.png" alt="logo">
+                <h1>45 dias</h1>
+            </div>
+
+
+    </main>
