--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,23 +1,66 @@
-html {
-  font-size: 14px;
-  min-height: 100%;
+*
+{
+  margin:0px;
+  padding:0px;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+.selector {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  background: white;
+  padding: 15px 25px;
+  border-radius: 12px;
+  box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+  font-size: 1.2rem;
+  user-select: none;
 }
 
-body {
-  margin: 10px;
-  padding: 10px;
+.flecha {
+  cursor: pointer;
+  font-size: 1.5rem;
+  transition: transform 0.1s ease;
+}
+
+.flecha:hover {
+  transform: scale(1.2);
 }
 
 
-footer {
-  margin-top: 10px;
-  padding: 10px;
-  background-color: #f8f9fa;
-  border-top: 1px solid #e9ecef;
+/* inicio header */
+
+.navbar-brand img
+{
+    width: 50% !important;
+    height: auto !important;
 }
+
+.navbar 
+{
+    background-color: #B89DD9 !important;
+}
+
+.offcanvas-body
+{
+    background-color: #B89DD9 !important;
+}
+
+.offcanvas
+{
+    background-color: #7A5BA8 !important;   
+}
+
+.offcanvas-title
+{
+    color:white !important;
+}
+
+.nav-link
+{
+    color:white !important;
+
+}
+
+/* fin header */
+
+
