AccountController avanzado bastante

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <header>
            <!-- inicio menu hamburguesa -->
 
-          <nav class="navbar bg-body-tertiary fixed-top">
+          <nav class="navbar fixed-top">
             <div class="container-fluid">
 
                 
