--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -120,7 +120,7 @@
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href='@Url.Action("LogOut", "Account")'>
                           
                            
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-left" viewBox="0 0 16 16">
