--- a/Views/Account/SignIn.cshtml
+++ b/Views/Account/SignIn.cshtml
@@ -3,13 +3,12 @@
         
         <h1>Create Account</h1>
         
-        <form action="Home.html"> 
+        <form action="'@Url.Action("guardarSignIn","Account")' method= "post"> 
         
             <input type="text"  placeholder="Email" name="email" />
             <input type="text"  placeholder="Username" name="username"/>
             <input type="password"  placeholder="Password" name="password" />
             <input type="date"  placeholder="Fecha de Nacimiento" />
-        
             <input type="radio" name="recibeNotis" />
             <label>Recibir Notificación</label>
         
