algunos arreglos de los controller y empezando a hacer la version ya preparada de appsdeocio_catalogo

--- a/Views/Home/AppsDeOcio_Catalogo.cshtml
+++ b/Views/Home/AppsDeOcio_Catalogo.cshtml
@@ -8,10 +8,12 @@ Seleccionar app de ocio
 
 <section>
 
-    @foreach(AppOcio i in @ViewBag.)
+    @foreach(AppOcio item in @ViewBag.listaAppsOcio)
+    {
     <div>
-    
+        
     </div>
+    }
 
 
 </section>
