Creada la view de editar

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿    <main>
+﻿   <!-- View Finalizada -->
+
+    <main>
         <section>
 
             <div class="centrar">
@@ -8,7 +10,7 @@
    
             <div class="space-around">
                 <a class="botones" href='@Url.Action("Login","Account")'>Log In</a>
-                <a class="botones" href="@Url.Action("SignIn","Account")">Sign In</a>
+                <a class="botones" href='@Url.Action("Signin","Account")'>Sign In</a>
             </div>
 
         <h2 class="subtitulo">Encontrá la claridad que necesitás para concentrarte, relajarte y rendir mejor cada día.</h2>
