--- a/Views/Home/Perfil.cshtml
+++ b/Views/Home/Perfil.cshtml
@@ -10,8 +10,8 @@
 
         <div>
 
-            <a href="editar.html">Editar</a>
-            <a href="index.html">LogOut</a>
+            <a href='@Url.Action("Editar","Home")'>Editar</a>
+            <a href='@Url.Action("Index","Home")'>LogOut</a>
 
         </div>
 
