--- a/Views/Home/PlayList.cshtml
+++ b/Views/Home/PlayList.cshtml
@@ -9,6 +9,14 @@
                 <div>
                     <img src="" alt="FotoPlaylist">
                     <h2>Nombre Playlist</h2>
+                    <button onclick="Play()">Play</button>
+                    <p>Tag</p>
+                    <p>Tag</p>
+                </div>
+
+                <div>
+                    <img src="" alt="FotoPlaylist">
+                    <button onclick="Play()">Play</button>
                     <a href="">Play</a>
                     <p>Tag</p>
                     <p>Tag</p>
@@ -17,7 +25,7 @@
                 <div>
                     <img src="" alt="FotoPlaylist">
                     <h2>Nombre Playlist</h2>
-                    <a href="">Play</a>
+                    <button onclick="Play()">Play</button>
                     <p>Tag</p>
                     <p>Tag</p>
                 </div>
@@ -25,15 +33,7 @@
                 <div>
                     <img src="" alt="FotoPlaylist">
                     <h2>Nombre Playlist</h2>
-                    <a href="">Play</a>
-                    <p>Tag</p>
-                    <p>Tag</p>
-                </div>
-
-                <div>
-                    <img src="" alt="FotoPlaylist">
-                    <h2>Nombre Playlist</h2>
-                    <a href="">Play</a>
+                    <button onclick="Play()">Play</button>
                     <p>Tag</p>
                     <p>Tag</p>
                 </div>
