--- a/Views/Home/Playlist_Frecuencias.cshtml
+++ b/Views/Home/Playlist_Frecuencias.cshtml
@@ -3,29 +3,33 @@
         <h1>Nombre</h1>
         <h5>NoHaze Team</h5>
 
-        <a href="">Play</a>
-        <a href="">Shuffle</a>
+        <button onclick="Play()">Play</button>
+        <button onclick="Shuffle()">Shuffle</button>
 
         <section>
             <div>
                 <img src="" alt="FotoFrecuencia">
                 <h2>1000hz (Dormir)</h2>
                 <h5>NoHaze Team</h5>
+                <button onclick="Play()">Play</button>
             </div>
             <div>
                 <img src="" alt="FotoFrecuencia">
                 <h2>1000hz (Dormir)</h2>
                 <h5>NoHaze Team</h5>
+                <button onclick="Play()">Play</button>
             </div>
             <div>
                 <img src="" alt="FotoFrecuencia">
                 <h2>1000hz (Dormir)</h2>
                 <h5>NoHaze Team</h5>
+                <button onclick="Play()">Play</button>
             </div>
             <div>
                 <img src="" alt="FotoFrecuencia">
                 <h2>1000hz (Dormir)</h2>
                 <h5>NoHaze Team</h5>
+                <button onclick="Play()">Play</button>
             </div>
         </section>
 
@@ -37,11 +41,13 @@
                 <img src="" alt="FotoFrecuencia">
                 <h2>1000hz (Dormir)</h2>
                 <h5>NoHaze Team</h5>
+                <button onclick="Play()">Play</button>
             </div>
             <div>
                 <img src="" alt="FotoFrecuencia">
                 <h2>1000hz (Dormir)</h2>
                 <h5>NoHaze Team</h5>
+                <button onclick="Play()">Play</button>
             </div>
             
         </section>
