--- a/Views/Home/Tienda_Catalogo.cshtml
+++ b/Views/Home/Tienda_Catalogo.cshtml
@@ -7,35 +7,19 @@
         <section class="layout">
             <div>
                 <img src="" alt="AppOcio">
-                <a href="Tienda-Compra.html">Comprar</a>
+                <button onclick="Comprar()">Comprar</button>
             </div>
             <div>
                 <img src="" alt="AppOcio">
-                <a href="Tienda-Compra.html">Comprar</a>
+                <button onclick="Comprar()">Comprar</button>
             </div>
             <div>
                 <img src="" alt="AppOcio">
-                <a href="Tienda-Compra.html">Comprar</a>
+                <button onclick="Comprar()">Comprar</button>
             </div>
             <div>
                 <img src="" alt="AppOcio">
-                <a href="Tienda-Compra.html">Comprar</a>
-            </div>
-            <div>
-                <img src="" alt="AppOcio">
-                <a href="Tienda-Compra.html">Comprar</a>
-            </div>
-            <div>
-                <img src="" alt="AppOcio">
-                <a href="Tienda-Compra.html">Comprar</a>
-            </div>
-            <div>
-                <img src="" alt="AppOcio">
-                <a href="Tienda-Compra.html">Comprar</a>
-            </div>
-            <div>
-                <img src="" alt="AppOcio">
-                <a href="Tienda-Compra.html">Comprar</a>
+                <button onclick="Comprar()">Comprar</button>
             </div>
           </section>
 
