Metodo eliminarAppOcio terminado en clase BD y empezando a hacer view de editar perfil y controller de editar perfil

--- a/Views/Home/Perfil.cshtml
+++ b/Views/Home/Perfil.cshtml
@@ -10,7 +10,7 @@
 
         <div>
 
-            <a href='@Url.Action("Editar","Home")'>Editar</a>
+            <a href='@Url.Action("Editar_Perfil","Home")'>Editar</a>
             <a href='@Url.Action("Index","Home")'>LogOut</a>
 
         </div>
