--- a/Views/Home/AppsDeOcio_Catalogo.cshtml
+++ b/Views/Home/AppsDeOcio_Catalogo.cshtml
@@ -11,9 +11,19 @@ Seleccionar app de ocio
     @foreach(AppOcio item in @ViewBag.listaAppsOcio)
     {
     <div>
+          <img src="/Imagenes/@item.foto/" />
+
+        @item.titulo
+
+        <a href="#">
         
+        
+        <img src="/Imagenes/delete-icon.png" /> 
+
+        </a>
     </div>
     }
 
+<!-- falta hacer el controller de eliminar app de ocio-->
 
 </section>
