AppsDeOcio_Catalogo terminado, con los controller necesarios, bd y todo

--- a/Views/Home/AppsDeOcio_Catalogo.cshtml
+++ b/Views/Home/AppsDeOcio_Catalogo.cshtml
@@ -15,7 +15,7 @@ Seleccionar app de ocio
 
         @item.titulo
 
-        <a href="#">
+        <a href='@Url.Action("eliminarAppOcio", "Home", new { IDAppOcio = item.id })'>
         
         
         <img src="/Imagenes/delete-icon.png" /> 
