--- a/Views/Home/Editar_Perfil.cshtml
+++ b/Views/Home/Editar_Perfil.cshtml
@@ -5,7 +5,7 @@
 <label>Username</label>
 <input type="text" placeholder="@ViewBag.Usuario.username"/>
 
-<label>Username</label>
+<label>Fecha de Nacimiento</label>
 <input type="date" placeholder="@ViewBag.Usuario.fechaNacimiento"/>
 
 <label>Descripcion</label>
