--- a/Views/Home/Editar_Perfil.cshtml
+++ b/Views/Home/Editar_Perfil.cshtml
@@ -2,6 +2,10 @@
 
 <img src="@ViewBag.Usuario.foto" alt="foto de perfil" />
 
+<form action='@Url.Action("aceptarCambiosPerfil", "Home")' method="POST">
+
+
+
 <label>Username</label>
 <input type="text" placeholder="@ViewBag.Usuario.username"/>
 
@@ -14,7 +18,10 @@
 <label>Objetivo</label>
 <input type="text" placeholder="@ViewBag.Usuario.objetivo"/>
 
-<a href="#">Aceptar</a>
+<input type="submit" value="Aceptar" />
+
+</form>
+
 <a href="#">Cancelar</a> 
 
 <!-- faltan hacer estos dos metodos en el controller. Y el aceptar seguro que tiene que tener trabajo de bd con update -->
