editar perfil terminado con sus controller, sus respectivas bd y sp

--- a/Views/Home/Editar_Perfil.cshtml
+++ b/Views/Home/Editar_Perfil.cshtml
@@ -22,8 +22,7 @@
 
 </form>
 
-<a href="#">Cancelar</a> 
+<a href='@Url.Action("Perfil", "Home")'>Cancelar</a> 
 
-<!-- faltan hacer estos dos metodos en el controller. Y el aceptar seguro que tiene que tener trabajo de bd con update -->
 
 </main>
