siguiendo con estadisticas (felipe a-Ilan)

--- a/Views/Account/SignIn.cshtml
+++ b/Views/Account/SignIn.cshtml
@@ -19,6 +19,8 @@
         
         </form>
         
-        <a href='@Url.Action("Index","Home")'>.</a>
+        <div class="centrar">
+        <a href='@Url.Action("Index","Home")' class="back-arrow">&#8629;</a>
+        </div>
 
     </main>
